# Spatialize

./: CMakeLists.txt
SOIL_makefile/: CMakeLists.txt  Makefile
dependencies/SOIL_makefile/: CMakeLists.txt
spatialize/include/: SpatializeApp.h
spatialize/include/example/: ExampleCube.h
spatialize/source/: SpatializeApp.cpp
spatialize/source/example/: ExampleCube.cpp
